objects/TEMarketing__MQLOpportunity__c.object
<CustomObject>
    <description>A listing of all opportunities that were generated from the MQL record.
Allows us to see not just that an MQL was closed, but all of the Opportunities that were influcenced by the MQL.</description>
    <fields>
        <fullName>TEMarketing__Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Is_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Won?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__MQL_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MQL Record</label>
        <referenceTo>TEMarketing__MQLRecord__c</referenceTo>
        <relationshipLabel>MQLOpportunities</relationshipLabel>
        <relationshipName>MQLOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Opportunity_Probability__c</fullName>
        <label>Opportunity Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MQLOpportunities</relationshipLabel>
        <relationshipName>MQLOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MQLOpportunity</label>
    <listViews>
        <fullName>TEMarketing__All</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Opportunity__c</columns>
        <columns>TEMarketing__MQL_Record__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MQLOpp-{0}</displayFormat>
        <label>MQLOpportunity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MQLOpportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>